--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,6 +16,6 @@
     background-color: rgba(0, 0, 0, 0.692);
     height: 65px;
 }
-#main-row{
-    margin-top: 200px;
+.m-row{
+    margin-top:80px;
 }
