--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,17 @@
 <section id="bg">
-  <div class="col-md-12 d-flex" id="small-nav">
+  <div class="col-md-13 d-flex" id="small-nav">
     <p class="text-white align-self-center m-0 ml-auto">LOREM IPSUM</p>
   
   </div>
   <div id="logo"> <img src="././assets/img/logo.png" class="img-fluid" alt=""></div>
-
-  <div class="row main-row d-flex">
-      <div class="col-md-7">
-      <div class="col-md-3 m-0">
+<div class="container-fluid">
+  <div class="row m-row">
+     <div class="col-md-6">
+         <div class="row">
+      <div class="col-md-3">
           <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3 m-0">
+      <div class="col-md-3">
           <img src="././assets/img/impermeable.png" class="img-fluid" alt="">
       </div>
       <div class="col-md-3">
@@ -34,38 +35,46 @@
       <div class="col-md-3">
           <img src="././assets/img/yeso.png" class="img-fluid" alt="">
       </div>
-  </div>
-    <div class="col-md-4 px-4">
-      <div class="form-block pd-tiny " data-rgen-sm="pd-20">
-      <h2 class="mr-b-10 text-white">Envíenos su consulta</h2>
+    </div>
 
+    </div>
+  <!-- formulario -->
+
+    <div class="col-md-4 ml-auto">
+      <div class="form-block" data-rgen-sm="pd-30">
+      <h2 class="mr-b-10 text-white">Envíenos su consulta</h2>
       <form action="" class="" novalidate="novalidate">
         <div class="">
-          <input type="hidden" name="to" value="r.genesis.art@gmail.com">
+          <input type="hidden" name="to" value="">
           <div class="form-group">
-            <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Enter your name"
+            <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
               aria-required="true">
           </div>
           <div class="form-group">
-            <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Enter your email"
+            <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
               aria-required="true">
           </div>
           <div class="form-group">
-            <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Enter your phone number"
+            <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
               aria-required="true">
           </div>
           <div class="form-group">
-            <textarea class="form-control" data-label="Message" required="" data-msg="Please enter your message." name="message" placeholder="Add your message"
+            <textarea class="form-control" data-label="Message" required="" data-msg="Please enter your message." name="message" placeholder="Mensaje"
               cols="30" rows="10" aria-required="true"></textarea>
           </div>
         </div>
-        <button type="submit" class="btn solid btn-dark block">
+        <button type="submit" class="btn solid btn-danger btn-block block">
           <i class="fa fa-envelope-o"></i>Enviar</button>
       </form>
       <!-- / form -->
     </div>
   </div>
-  </div>
+
+
+</div>
+</div>
+
+  
 
 
 
