--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,14 @@
 <section id="bg">
   <div class="col-md-13 d-flex" id="small-nav">
     <p class="text-white align-self-center m-0 ml-auto">LOREM IPSUM</p>
+    <span></span>
   
   </div>
   <div id="logo"> <img src="././assets/img/logo.png" class="img-fluid" alt=""></div>
 <div class="container-fluid">
   <div class="row m-row">
      <div class="col-md-6">
+         <h1 class="h1 text-white">Nuestros productos</h1>
          <div class="row">
       <div class="col-md-3">
           <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
@@ -40,9 +42,9 @@
     </div>
   <!-- formulario -->
 
-    <div class="col-md-4 ml-auto">
-      <div class="form-block" data-rgen-sm="pd-30">
-      <h2 class="mr-b-10 text-white">Envíenos su consulta</h2>
+    <div class="col-md-5 ml-auto">
+      <div id="formulario" class="mr-4">
+      <h1 class="h1 text-white">Envíenos su consulta</h1>
       <form action="" class="" novalidate="novalidate">
         <div class="">
           <input type="hidden" name="to" value="">
@@ -63,8 +65,8 @@
               cols="30" rows="10" aria-required="true"></textarea>
           </div>
         </div>
-        <button type="submit" class="btn solid btn-danger btn-block block">
-          <i class="fa fa-envelope-o"></i>Enviar</button>
+        <button type="submit" class="btn solid btn-success btn-block block">
+         <i class="fa fa-envelope"></i>Enviar</button>
       </form>
       <!-- / form -->
     </div>
