--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css?family=Varela+Round');
+ section{
+    font-family: 'Varela Round', sans-serif;
+  
+ 
+ }
 #bg{
     
     background: linear-gradient(0deg, rgba(2,173,231,0.5), rgba(2,173,231,0.5)),url("../../assets/img/construction.jpg");
@@ -5,17 +12,27 @@
     background-size: cover;
     min-height: 700px;
     
-    /* filter:brightness(0.8); */
+    filter:brightness("../../assets/img/construction.jpg",0.8);
 
 }
 #logo{
     position: absolute;
-    top:10%;
+    top: 2%;
+    left: 2%;
+    /* box-shadow: 5px 5px 5px #fff;  */
 }
 #small-nav{
     background-color: rgba(0, 0, 0, 0.692);
     height: 65px;
 }
 .m-row{
-    margin-top:80px;
+    margin-top:100px;
+   
 }
+.m-row img{
+    /* box-shadow: 5px 5px 5px #fff; */
+}
+#formulario{
+ 
+}
+
