--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<div class="row">
+    <footer class="col-md-12 d-flex text-white">
+    <div class="col-md-4 mx-auto d-flex align-items-stretch">
+      <p class="h3 mx-auto align-self-center">Llámenos al...</p>
+    </div>
+    </footer>
+  </div>
