--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,46 @@
-<section id="bg">
+<section id="bg" class="filter">
   <div class="col-md-13 d-flex" id="small-nav">
-    <p class="text-white align-self-center m-0 ml-auto">LOREM IPSUM</p>
-    <span></span>
-  
+    <p class="text-white align-self-center ml-auto"><span><i class="fa fa-phone fa-x2"></i></span>   4444-8888</p>
   </div>
   <div id="logo"> <img src="././assets/img/logo.png" class="img-fluid" alt=""></div>
-<div class="container-fluid">
+<div class="container-fluid cont">
   <div class="row m-row">
      <div class="col-md-6">
-         <h1 class="h1 text-white">Nuestros productos</h1>
+         <h1 class="h1 text-white mb-2">Nuestros productos</h1>
          <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/impermeable.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/mortero.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/multifunc.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/pastina.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/premium.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/stukor.png" class="img-fluid" alt="">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
           <img src="././assets/img/yeso.png" class="img-fluid" alt="">
       </div>
     </div>
 
     </div>
   <!-- formulario -->
-
     <div class="col-md-5 ml-auto">
-      <div id="formulario" class="mr-4">
+      <div id="formulario">
       <h1 class="h1 text-white">Envíenos su consulta</h1>
       <form action="" class="" novalidate="novalidate">
         <div class="">
@@ -61,12 +58,12 @@
               aria-required="true">
           </div>
           <div class="form-group">
-            <textarea class="form-control" data-label="Message" required="" data-msg="Please enter your message." name="message" placeholder="Mensaje"
+            <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message" placeholder="Mensaje"
               cols="30" rows="10" aria-required="true"></textarea>
           </div>
         </div>
         <button type="submit" class="btn solid btn-success btn-block block">
-         <i class="fa fa-envelope"></i>Enviar</button>
+         <i class="fa fa-envelope fa-lg"></i>  Enviar</button>
       </form>
       <!-- / form -->
     </div>
