--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,24 @@
-<div class="row">
-    <footer class="col-md-12 d-flex text-white">
-    <div class="col-md-4 mx-auto d-flex align-items-stretch">
-      <p class="h3 mx-auto align-self-center">Llámenos al...</p>
+<footer >
+  <div class="row text-white">
+    <div class="col-md-4">
+      <img src="././assets/img/logo.png" alt="">
+      <h3 class="my-3">lorem ipsum</h3>
+      <p>Lorem ipsum dolor sit amet</p>
     </div>
-    </footer>
+    <div class="col-md-3 d-flex">
+        <div class="align-self-center ">
+      <h3>Llámenos al</h3>
+      <p>Lorem ipsum dolor sit amet</p>
+    </div>
   </div>
+
+  <div class="col-md-5 d-flex">
+      <div class="align-self-center ">
+    <h3>lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis veniam vel eius incidunt iusto. Officiis
+      nesciunt ipsam, voluptatibus rem tempora molestias adipisci, temporibus, nisi pariatur nulla sint at fuga!</p>
+  </div>
+</div>
+
+  </div>
+</footer>
