--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,81 +1,84 @@
-<section id="bg" class="filter">
-  <div class="col-md-13 d-flex" id="small-nav">
-    <p class="text-white align-self-center ml-auto"><span><i class="fa fa-phone fa-x2"></i></span>   4444-8888</p>
-  </div>
-  <div id="logo"> <img src="././assets/img/logo.png" class="img-fluid" alt=""></div>
-<div class="container-fluid cont">
-  <div class="row m-row">
-     <div class="col-md-6">
-         <h1 class="h1 text-white mb-2">Nuestros productos</h1>
-         <div class="row">
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
+<section id="home">
+   <div class="container-fluid">
+    <div class="row m-row">
+      <div class="col-md-6 text-white">
+          <div class="content typo-light">
+              <h1 class="title large lh-2" data-rgen-sm="medium">Build your dream home with trusted service</h1>
+              <p class="title-sub mini" data-rgen-sm="small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt</p>
+              <hr class="hr">
+              <p class="italic bold-4 fs30 lh-4" data-rgen-sm="fs20">Construction projects<br>now made quick and easy</p>
+            </div>
       </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/impermeable.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/membranacement.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/mortero.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/multifunc.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/pastina.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/premium.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/stukor.png" class="img-fluid" alt="">
-      </div>
-      <div class="col-md-3 mb-2">
-          <img src="././assets/img/yeso.png" class="img-fluid" alt="">
-      </div>
-    </div>
 
-    </div>
-  <!-- formulario -->
-    <div class="col-md-5 ml-auto">
-      <div id="formulario">
-      <h1 class="h1 text-white">Envíenos su consulta</h1>
-      <form action="" class="" novalidate="novalidate">
-        <div class="">
-          <input type="hidden" name="to" value="">
-          <div class="form-group">
-            <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
-              aria-required="true">
-          </div>
-          <div class="form-group">
-            <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
-              aria-required="true">
-          </div>
-          <div class="form-group">
-            <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
-              aria-required="true">
-          </div>
-          <div class="form-group">
-            <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message" placeholder="Mensaje"
-              cols="30" rows="10" aria-required="true"></textarea>
-          </div>
-        </div>
-        <button type="submit" class="btn solid btn-success btn-block block">
-         <i class="fa fa-envelope fa-lg"></i>  Enviar</button>
-      </form>
-      <!-- / form -->
+      <!-- formulario -->
+      <div class="col-md-6">
+          <form action="" class="col-md-8 p-4 mx-auto bg-white formulario">
+            <h2 class="text-white form-title text-center">Envíenos su consulta</h2>
+            <div class="">
+              <div class="form-group">
+                <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
+                  placeholder="Mensaje" cols="30" rows="10" aria-required="true"></textarea>
+              </div>
+            </div>
+            <button type="submit" class="btn solid btn-block block text-white">
+              <i class="fa fa-envelope-o fa-lg text-white mr-2"></i>ENVIAR</button>
+          </form>
+          <!-- / form -->
+        
+     
+      </div>
+       <!--/ formulario -->
     </div>
   </div>
+</section>
 
-
-</div>
-</div>
-
-  
-
-
-
-
+<section id="productos">
+    <h1 class="h1 text-center my-4">Nuestros productos</h1>
+  <div class="row px-5">
+      <div class="col-md-2 p-4">
+        <h3 class="text-center">Membrana Cementicia</h3>
+        <img src="././assets/img/membranacement.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+        <h3 class="text-center">Abamix Impermeable</h3>
+        <img src="././assets/img/impermeable.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+         <h3 class="text-center">Mortero Base Coat</h3>
+        <img src="././assets/img/mortero.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+          <h3 class="text-center">Abaplak Multifunción</h3>
+        <img src="././assets/img/multifunc.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+          <h3 class="text-center">Pastina Impermeable</h3>
+        <img src="././assets/img/pastina.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+          <h3 class="text-center">Abamix Premium</h3>
+        <img src="././assets/img/premium.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+          <h3 class="text-center">Stuko Abacor</h3>
+        <img src="././assets/img/stukor.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+      <div class="col-md-2 p-4">
+          <h3 class="text-center">Revoque fino al Yeso</h3>
+        <img src="././assets/img/yeso.png" class="img-fluid d-flex mx-auto" alt="">
+      </div>
+    
+  </div>
 </section>
