modificación de plantilla

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,56 @@
-<footer >
-  <div class="row text-white">
+<footer>
+  <div class="row d-flex text-center">
     <div class="col-md-4">
-      <img src="././assets/img/logo.png" alt="">
+      <img src="././assets/img/logo_w.png" class="mx-auto img-fluid" alt="">
       <h3 class="my-3">lorem ipsum</h3>
       <p>Lorem ipsum dolor sit amet</p>
     </div>
-    <div class="col-md-3 d-flex">
-        <div class="align-self-center ">
-      <h3>Llámenos al</h3>
-      <p>Lorem ipsum dolor sit amet</p>
+    <div class="col-md-3 ">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Link</a>
+            </li>
+          </ul>
     </div>
-  </div>
 
-  <div class="col-md-5 d-flex">
-      <div class="align-self-center ">
-    <h3>lorem ipsum</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis veniam vel eius incidunt iusto. Officiis
-      nesciunt ipsam, voluptatibus rem tempora molestias adipisci, temporibus, nisi pariatur nulla sint at fuga!</p>
-  </div>
-</div>
+    <div class="col-md-5 ">
+      <h3 class="mb-3 text-center text-sm-left title-mini">Sign up to get news</h3>
+      
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
+          <span class="input-group-addon my-auto p-2" id="basic-addon2">
+            <i class="fa fa-envelope-o fa-lg text-white"></i>
+          </span>
+        </div>
+      
+      <div class="social-media mt-4 d-flex justify-content-center justify-content-sm-start">
+        <div class="sq bg-d d-flex mr-2">
+          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </div>
+        <div class="sq d-flex mr-2">
+          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+            <i class="fa fa-google"></i>
+          </a>
+        </div>
+        <div class="sq d-flex mr-2">
+          <a href="#" target="_blank" class="text-white mx-auto align-self-center">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
 
   </div>
 </footer>
