--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,12 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=Varela+Round');
-@import url('https://fonts.googleapis.com/css?family=Tauri');
 
 footer{
     background-color:#2d3345;
     padding:30px;
-    font-family: 'Tauri', sans-serif;
+    font-family: "Open Sans",sans-serif;
+    color:rgba(255, 255, 255, 0.712)!important;
 }
 footer img{
- width: 40% !important;
+    width: 30%!important;
+}
+.sq{
+    width: 32px;
+    height: 32px;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all .2s ease-in-out;
+}
 
+.sq:hover{
+    background-color: rgb(255, 255, 255);
+}
+
+.sq:hover >  a {
+    color: #2d3345!important;
+}
+
+.input-group span{
+    border-radius: 0 5px 5px 0;
+    background-color: rgba(255, 255, 255, 0.219);
+}
+.title-mini{
+    font-size: 18px;
 }
