--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,24 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Varela+Round');
-@import url('https://fonts.googleapis.com/css?family=Tauri');
- 
+
 section{
-    font-family: 'Varela Round', sans-serif;
-    font-family: 'Tauri', sans-serif;
+    font-family: "Open Sans",sans-serif;
  }
 
-#home{
-    background: linear-gradient(0deg, rgba(2, 174, 231, 0.705), rgba(2,173,231,0.5)),url("../../assets/img/construction.jpg");
+.main{
+    background: url("../../assets/img/construction_overlay.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 155px 30px 90px 30px;
-    background-blend-mode: multiply;
+    background-position: center center;
+    padding: 150px 0;
+    
 }
 .filter {
     -webkit-backdrop-filter: blur(10px); /* Safari 9+ */
     backdrop-filter: blur(10px); /* Chrome and Opera */
     background-color: rgba(255, 255, 255, 0.3);
 }
-
+.title-large{
+        font-size: 50px;
+        line-height: 1.2;
+        font-weight: 700;
+        
+}
+.title-small{
+    font-size: 24px;
+    font-weight: 700;
+}
+.title-mini{
+    font-size: 18px;
+    margin-bottom: 40px;
+    font-weight: 300;
+}
 #logo img {
      width: 80%;
      drop-shadow:8px 8px 3px rgba(68, 209, 13, 0.5);
@@ -39,13 +51,26 @@ section{
 }
 
 #productos{
-    padding: 40px 0;
+    padding: 100px 0;
     background-color: #f9f9f9;
    
 }
 #productos h1,h3{
     color:#2d3345!important;
 }
+#productos h1{
+    font-size: 3.5rem!important;
+    font-weight: 700;
+}
+#productos h3{
+   font-size: 1.4rem!important;
+   font-weight: bold;
+}
 .hr{
     border-color: rgba(255,255,255,0.15)
+}
+@media screen and (max-width:425px) {
+    form h2 {
+       font-size: 2rem;
+    }
 }
