--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,23 @@
-<section id="home">
-   <div class="container-fluid">
-    <div class="row m-row">
-      <div class="col-md-6 text-white">
-          <div class="content typo-light">
-              <h1 class="title large lh-2" data-rgen-sm="medium">Build your dream home with trusted service</h1>
-              <p class="title-sub mini" data-rgen-sm="small">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt</p>
-              <hr class="hr">
-              <p class="italic bold-4 fs30 lh-4" data-rgen-sm="fs20">Construction projects<br>now made quick and easy</p>
+<section class="main">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-10 mx-auto">
+        <div class="row">
+          <div class="col-md-6 text-white">
+            <div class="content typo-light">
+              <h1 class="title-large mb-3 mt-5" data-rgen-sm="medium">Build your dream home with trusted service</h1>
+              <p class="title-mini">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt</p>
+              <hr class="hr my-3">
+              <p class="italic bold-3 fs30 lh-3" data-rgen-sm="fs20">Construction projects
+                <br>now made quick and easy</p>
             </div>
-      </div>
+          </div>
 
-      <!-- formulario -->
-      <div class="col-md-6">
-          <form action="" class="col-md-8 p-4 mx-auto bg-white formulario">
-            <h2 class="text-white form-title text-center">Envíenos su consulta</h2>
-            <div class="">
+          <!-- formulario -->
+          <div class="col-md-6">
+            <form action="" class="col-md-8 p-3 ml-auto bg-white formulario">
+              <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
+
               <div class="form-group">
                 <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
                   aria-required="true">
@@ -31,54 +34,63 @@
                 <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
                   placeholder="Mensaje" cols="30" rows="10" aria-required="true"></textarea>
               </div>
-            </div>
-            <button type="submit" class="btn solid btn-block block text-white">
-              <i class="fa fa-envelope-o fa-lg text-white mr-2"></i>ENVIAR</button>
-          </form>
-          <!-- / form -->
-        
-     
+              <button type="submit" class="d-flex btn solid btn-block block text-white">
+                <div class="mx-auto">
+                  <i class="fa fa-envelope-o fa-lg text-white mr-2"></i>
+                  <span class="d-inline-flex" style="">ENVIAR</span>
+                </div>
+              </button>
+
+            </form>
+          </div>
+          <!--/ formulario -->
+
+        </div>
       </div>
-       <!--/ formulario -->
     </div>
+    <!--/ row-->
   </div>
+  <!--/ container-fluid-->
 </section>
+<!--/ section home-->
 
 <section id="productos">
-    <h1 class="h1 text-center my-4">Nuestros productos</h1>
-  <div class="row px-5">
-      <div class="col-md-2 p-4">
-        <h3 class="text-center">Membrana Cementicia</h3>
+  <div class="container">
+    <h1 class="h1 text-center mb-5">Nuestros productos</h1>
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-2 mx-3 mb-3">
         <img src="././assets/img/membranacement.png" class="img-fluid d-flex mx-auto" alt="">
+        <h3 class="text-center mt-3">Membrana Cementícia</h3>
       </div>
-      <div class="col-md-2 p-4">
-        <h3 class="text-center">Abamix Impermeable</h3>
+      <div class="col-md-2 mx-3 mb-3">
         <img src="././assets/img/impermeable.png" class="img-fluid d-flex mx-auto" alt="">
+        <h3 class="text-center mt-3">Abamix Impermeable</h3>
       </div>
-      <div class="col-md-2 p-4">
-         <h3 class="text-center">Mortero Base Coat</h3>
-        <img src="././assets/img/mortero.png" class="img-fluid d-flex mx-auto" alt="">
-      </div>
-      <div class="col-md-2 p-4">
-          <h3 class="text-center">Abaplak Multifunción</h3>
+      <div class="col-md-2 mx-3 mb-3">
         <img src="././assets/img/multifunc.png" class="img-fluid d-flex mx-auto" alt="">
+        <h3 class="text-center mt-3">Abaplak Multifunción</h3>
       </div>
-      <div class="col-md-2 p-4">
-          <h3 class="text-center">Pastina Impermeable</h3>
+      <div class="col-md-2 mx-3 mb-3">
         <img src="././assets/img/pastina.png" class="img-fluid d-flex mx-auto" alt="">
+        <h3 class="text-center mt-3">Pastina Impermeable</h3>
       </div>
-      <div class="col-md-2 p-4">
-          <h3 class="text-center">Abamix Premium</h3>
+      <div class="col-md-2 mx-3 mb-3">
         <img src="././assets/img/premium.png" class="img-fluid d-flex mx-auto" alt="">
+        <h3 class="text-center mt-3">Abamix Premium</h3>
       </div>
-      <div class="col-md-2 p-4">
-          <h3 class="text-center">Stuko Abacor</h3>
-        <img src="././assets/img/stukor.png" class="img-fluid d-flex mx-auto" alt="">
-      </div>
-      <div class="col-md-2 p-4">
-          <h3 class="text-center">Revoque fino al Yeso</h3>
-        <img src="././assets/img/yeso.png" class="img-fluid d-flex mx-auto" alt="">
-      </div>
-    
+      <div class="col-md-2 mx-3 mb-3">
+          <img src="././assets/img/stukor.png" class="img-fluid d-flex mx-auto" alt="">
+          <h3 class="text-center mt-3">Stuko Abacor</h3>
+        </div>
+        <div class="col-md-2 mx-3 mb-3">
+            <img src="././assets/img/yeso.png" class="img-fluid d-flex mx-auto" alt="">
+            <h3 class="text-center mt-3">Revoque fino al Yeso</h3>
+          </div>
+          <div class="col-md-2 mx-3 mb-3">
+              <img src="././assets/img/mortero.png" class="img-fluid d-flex mx-auto" alt="">
+              <h3 class="text-center mt-3">Mortero Base Coat</h3>
+            </div>
+      
+    </div>
   </div>
 </section>
