--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,12 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Tauri');
+
 nav{
-    background-color:#2d3345 !important;
-    height: 65px;
-    box-shadow: 0 1px 9px rgb(190, 233, 249);
-    font-family: 'Tauri', sans-serif;
+    background-color: rgba(0, 0, 0, 0.1) !important;
+    min-height: 80px;
 }
-nav li a{
-    font-size: 1.3rem;
+
+nav .navbar-nav li{
+    font-size: 1.03rem;
+    border:1px solid transparent!important;
+    transition: border .18s ease-in-out;
+}
+nav .navbar-nav li:hover{
+   border:1px solid rgba(255, 255, 255, 0.5)!important;
+   
+}
+.nav-link{
+    color: rgba(255, 255, 255, 0.9)!important;
+}
+nav .navbar-nav ul li a {
+    
+    font-size: 14px !important;
+}
+nav .navbar-nav ul li a:hover {
+    color: #fff;
+    border-color: rgba(255, 255, 255, 0.993);
+}
+.box-phone{
+    font-size: 1.1rem!important;
+    letter-spacing: .08rem;
+    font-weight: bold;
+}
+.border-left{
+    border-left:1px solid rgba(255, 255, 255, 0.363);
 }
 #logo{
 position: absolute;
@@ -15,4 +39,10 @@ left: 2%;
 }
 #logo img{
   width:45%;
+}
+
+@media screen and (max-width:425px) {
+    #navbarSupportedContent ul li,div {
+        background-color: #2d3345;
     }
+}
