--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,30 +1,36 @@
-<nav class="navbar navbar-expand-lg fixed-top">
-    <div id="logo">
-        <img src="././assets/img/logo_w.png" class="img-fluid" alt="">
-      </div>
-  <div class="collapse navbar-collapse d-flex">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Home</a>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0" (scroll)="onScroll($event)">
+  <div class="container">
+  <a class="navbar-brand ml-3 mb-1" href="#">
+    <img src="././assets/img/logo_w.png" class="img-fluid w-50" alt="">
+  </a>
+
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse p-0" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto p-0">
+      <li class="nav-item d-flex bd-dark">
+        <a class="nav-link mx-auto" href="#">Inicio</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Productos</a>
+      <li class="nav-item d-flex">
+        <a class="nav-link mx-auto" href="#">Quiénes somos</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Nosotros</a>
+      <li class="nav-item d-flex">
+        <a class="nav-link  mx-auto" href="#">Productos</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Contacto</a>
+      <li class="nav-item d-flex">
+        <a class="nav-link mx-auto" href="#">Contacto</a>
       </li>
     </ul>
-  </div>
-  <div>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">
-          <i class="fa fa-phone fa-lg mr-2"></i>6788-9077</a>
-      </li>
-    </ul>
-  </div>
+    <div class="nav-item px-4 border-left d-flex">
+      <span class="text-white box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;0123 456 789</span>
+    </div>
+  
  
+  </div>
+
+</div>
 </nav>
+
