--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
               </div>
               <button type="submit" class="d-flex btn solid btn-block block text-white">
                 <div class="mx-auto">
-                  <i class="fa fa-envelope-o fa-lg text-white mr-2"></i>
+                  <i class="fa fa-envelope-o fa-lg text-white mr-2 align-items-center"></i>
                   <span class="d-inline-flex" style="">ENVIAR</span>
                 </div>
               </button>
