--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0" (scroll)="onScroll($event)">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0"ng build --prod>
   <div class="container">
   <a class="navbar-brand ml-3 mb-1" href="#">
     <img src="././assets/img/logo_w.png" class="img-fluid w-50" alt="">
