--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<app-navbar [isScrolled] = isScrolled [ngClass]= "{'page-scroll-nav': isScrolled}"></app-navbar>
 <app-home></app-home>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
