--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0"ng build --prod>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top p-0" [ngClass]= "{'navbar-scroll-bg': isScrolled}">
   <div class="container">
-  <a class="navbar-brand ml-3 mb-1" href="#">
+  <a class="navbar-brand ml-3 mb-1 logo" href="#">
     <img src="././assets/img/logo_w.png" class="img-fluid w-50" alt="">
   </a>
 
