--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css"; 
+
+.navbar{
+    background-color: rgba(0, 0, 0, 0.123);
+    height: 80px;
+    transition: all .2s ease-out;
+    
+}
+.logo img{
+    width:45%;
+    transition: all .2s ease-out;
+  }
+
+.page-scroll-nav .navbar {
+    background-color: #2d3345;
+    height: 50px;
+    
+}
+.page-scroll-nav .navbar .logo img{
+    width:10%;
+    
+}
