--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,12 +59,13 @@
     <h1 class="h1 text-center mb-5">Nuestros productos</h1>
     <div class="row d-flex justify-content-center">
       <div *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-md-2 mx-3 mb-3">
-        <img src="{{producto.imagen}}" class="img-fluid d-flex mx-auto" alt="">
+        <a class="nav-link" [routerLink]="['/detalle-productos',producto.id]" >
+          <img src="{{producto.imagen}}" class="img-fluid d-flex mx-auto" alt="">
         <h3 class="text-center mt-3">{{producto.nombre}}</h3>
-        <a class="nav-link" [routerLink]="['/detalle-productos' , producto.id]">Ver detalle</a>
+      </a>
       </div>
     </div>
+  
   </div>
- 
-</section>
 
+</section>
