--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       <li class="nav-item d-flex">
         <a class="nav-link  mx-auto" href="#">Productos</a>
       </li>
-      <li class="nav-item d-flex">
+      <li class="nav-item d-flex mr-2">
         <a class="nav-link mx-auto" href="#">Contacto</a>
       </li>
     </ul>
