--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,17 +12,20 @@
   <div class="collapse navbar-collapse p-0" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto p-0">
       <li class="nav-item d-flex bd-dark">
-        <a class="nav-link mx-auto" href="#">Inicio</a>
+        <a class="nav-link mx-auto" routerLink="/home">Home</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" href="#">Quiénes somos</a>
+        <a class="nav-link mx-auto" routerLink="/productos">Productos</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link  mx-auto" href="#">Productos</a>
+        <a class="nav-link  mx-auto" routerLink="/beneficios">Beneficios</a>
+      </li>
+      <li class="nav-item d-flex">
+        <a class="nav-link mx-auto" routerLink="/como-llegar">Como llegar</a>
       </li>
       <li class="nav-item d-flex mr-2">
-        <a class="nav-link mx-auto" href="#">Contacto</a>
-      </li>
+          <a class="nav-link mx-auto" routerLink="/contacto">Contacto</a>
+        </li>
     </ul>
     <div class="nav-item px-4 border-left d-flex">
       <span class="text-white box-phone mx-auto"><i class="fa fa-phone"></i>&nbsp;0123 456 789</span>
