--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar [isScrolled] = isScrolled [ngClass]= "{'page-scroll-nav': isScrolled}"></app-navbar>
-
-<router-outlet></router-outlet>
-
+<div class="wrapper">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
 
