--- a/src/app/detalle-beneficios/detalle-beneficios.component.html
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.html
@@ -1,3 +1,21 @@
-<p>
-  detalle-beneficios works!
-</p>
+<div class="bg-warning padding-main">
+    <h1 class="text-center text-white title-large">{{benefSelected.nombre}}</h1>
+    <div class="">
+      <div class="row d-flex">
+        <div class="col-md-6">
+         <div class="row">
+        <div class="">
+          <p class="text-white p-3 d-flex mx-auto">{{benefSelected.detalle}}</p>
+        </div>
+        <div class=" d-flex ml-auto img-producto">
+          <img src="{{benefSelected.imagen}}" class="img-fluid mx-auto " alt="">
+        </div>
+      </div>
+      </div>
+      </div>
+    </div>
+    <button type="button" class="btn btn-info mx-auto">
+      <a class="nav-link text-white" [routerLink]="['/beneficios']">Volver</a>
+    </button>
+    
+  </div>
