--- a/src/app/detalle-productos/detalle-productos.component.html
+++ b/src/app/detalle-productos/detalle-productos.component.html
@@ -1,10 +1,30 @@
-<div class="row">
-  <p>
-    {{prodSelected.id}}
-  </p>
-  <p>{{prodSelected.detalle}}</p>
-  <div class="col-md-3">
-    <img src="{{prodSelected.imagen}}" class="img-fluid " alt="">
+<div class=" bg-color">
+  <div class="banner">
+    <img src="../../assets/img/banner.jpg" class="img-fluid" alt="">
   </div>
-  <a class="nav-link btn" [routerLink]="['/home']" >Volver</a>
+  <div class="padding-main">
+    <h1 class="text-center text-white title-large">{{prodSelected.nombre}}</h1>
+    <div class="row d-flex">
+      <div class="col-md-6">
+        <div class="row">
+            <p class="text-white p-3 mx-auto w-100 title-small">{{prodSelected.detalle}}</p>
+          <div class="d-flex mx-auto img-detalle">
+            <img src="{{prodSelected.imagenDet}}" class="img-fluid mx-auto " alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 d-flex ">
+        <div class="mx-auto">
+        <img src="{{prodSelected.imagen}}" class="img-fluid mx-auto " alt="">
+      </div>
+      </div>
+    </div>
+    <button type="button" class="btn btn-sm btn-outline-secondary my-5 mx-auto">
+      <a class="nav-link text-white" [routerLink]="['/home']">Volver</a>
+    </button>
+  </div>
+  <div class="banner">
+    <img src="../../assets/img/banner.jpg" class="img-fluid" alt="">
+  </div>
 </div>
