--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,8 +8,10 @@ section{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    padding: 150px 0;
     
+}
+.padding-main{
+    padding: 150px 0;
 }
 .filter {
     -webkit-backdrop-filter: blur(10px); /* Safari 9+ */
