--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="main">
+<section class="main padding-main">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-10 mx-auto">
