--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,10 +1,15 @@
-<section>
-  <div class="row">
-    <div *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="nav-link">
-
-      <a class="nav-link" [routerLink]="['/detalles' , producto.id]">{{producto.nombre}}</a>
-      <span class="badge">{{producto.id}}</span> {{producto.id}}
+<section id="productos" class="padding-main">
+    <div class="container">
+      <h1 class="h1 text-center mb-5">Nuestros productos</h1>
+      <div class="row d-flex justify-content-center">
+        <div *ngFor="let producto of productos" [class.selected]="producto === selectedProduct" (click)="onSelect(_prod)" class="col-md-2 mx-3 mb-3">
+          <a class="nav-link" [routerLink]="['/detalle-productos',producto.id]" >
+            <img src="{{producto.imagen}}" class="img-fluid d-flex mx-auto" alt="">
+          <h3 class="text-center mt-3">{{producto.nombre}}</h3>
+        </a>
+        </div>
+      </div>
+    
     </div>
-
-  </div>
-</section>
+  
+  </section>
