--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css"; 
-
+@import "~bootstrap/dist/css/bootstrap.min.css";
+body{
+    font-family: "Open Sans",sans-serif!important;
+}
 .navbar{
     background-color: rgba(0, 0, 0, 0.123);
     height: 80px;
@@ -21,3 +23,4 @@
     width:10%;
     
 }
+
