--- a/src/app/como-llegar/como-llegar.component.html
+++ b/src/app/como-llegar/como-llegar.component.html
@@ -1,3 +1,19 @@
-<p>
-  como-llegar works!
-</p>
+<div class=" bg-color">
+  <div class="banner">
+    <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
+  </div>
+  <div class="padding-main">
+    <h1 class="text-center text-dark title-large">¿Dónde estamos?</h1>
+    <div class="row d-flex">
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD09zQ9PNDNNy9TadMuzRV_UsPUoWKntt8&amp;q=-31.355041%2C+-63.964014"
+          style="border:0;width:100%;height:600px"></iframe>
+      </div>
+      <p class="text-lead">© Abacor - Industria Argentina Ruta 19 – Km 316 – Monte Cristo Córdoba – CP 5125 0351 432-1664 - 0351 438-3640
+      </p>
+    </div>
+  </div>
+  <div class="banner">
+    <img src="../../assets/img/banner_2.jpg" class="img-fluid" alt="">
+  </div>
+</div>
