--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,3 +1,46 @@
-<p>
-  contacto works!
-</p>
+<div class=" bg-color">
+    <div class="banner">
+      <img src="../../assets/img/banner_6.jpg" class="img-fluid" alt="">
+    </div>
+    <div class="padding-main">
+      <h1 class="text-center text-white title-large">{{prodSelected.nombre}}</h1>
+      <div class="row d-flex">
+        <!-- formulario -->
+        <div class="col-md-8 ">
+            <form action="" class="col-md-8 p-3 ml-auto bg-white formulario">
+              <h2 class="text-white form-title text-center title-small mt-1 mb-3">Envíenos su consulta</h2>
+              <div class="form-group">
+                <input class="form-control" data-label="Name" required="" data-msg="Please enter name." type="text" name="name" placeholder="Nombre"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <input class="form-control" data-label="Email" required="" data-msg="Please enter email." type="email" name="email" placeholder="Email"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <input class="form-control" required="" data-label="Phone" data-msg="Please phone number." type="text" name="phone" placeholder="Teléfono"
+                  aria-required="true">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control text-white" data-label="Message" required="" data-msg="Please enter your message." name="message"
+                  placeholder="Mensaje" cols="30" rows="10" aria-required="true"></textarea>
+              </div>
+              <button type="submit" class="d-flex btn solid btn-block block text-white">
+                <div class="mx-auto">
+                  <i class="fa fa-envelope-o fa-lg text-white mr-2 align-items-center"></i>
+                  <span class="d-inline-flex" style="">ENVIAR</span>
+                </div>
+              </button>
+
+            </form>
+          </div>
+          <!--/ formulario -->
+  
+        
+      </div>
+     
+    </div>
+    <div class="banner">
+      <img src="../../assets/img/banner_5.jpg" class="img-fluid" alt="">
+    </div>
+  </div>
