--- a/src/app/detalle-productos/detalle-productos.component.html
+++ b/src/app/detalle-productos/detalle-productos.component.html
@@ -14,9 +14,9 @@
         </div>
       </div>
 
-      <div class="col-md-6 d-flex ">
-        <div class="mx-auto">
-        <img src="{{prodSelected.imagen}}" class="img-fluid mx-auto " alt="">
+      <div class="col-md-6 d-flex">
+        <div class="mx-auto d-flex">
+        <img src="{{prodSelected.imagen}}" class="img-fluid align-self-end " alt="">
       </div>
       </div>
     </div>
