--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,13 +15,13 @@
         <a class="nav-link mx-auto" routerLink="/home">Home</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" routerLink="/productos">Productos</a>
+        <a class="nav-link mx-auto" href="#productos">Productos</a>
       </li>
       <li class="nav-item d-flex">
         <a class="nav-link  mx-auto" routerLink="/beneficios">Beneficios</a>
       </li>
       <li class="nav-item d-flex">
-        <a class="nav-link mx-auto" routerLink="/como-llegar">Como llegar</a>
+        <a class="nav-link mx-auto" routerLink="/como-llegar">Cómo llegar</a>
       </li>
       <li class="nav-item d-flex mr-2">
           <a class="nav-link mx-auto" routerLink="/contacto">Contacto</a>
