--- a/src/app/beneficios/beneficios.component.html
+++ b/src/app/beneficios/beneficios.component.html
@@ -1,18 +1,23 @@
-<section id="beneficios padding-main">
-    <div class="container">
-      <h1 class="h1 text-center mb-5">Beneficios</h1>
-      <div class="row d-flex justify-content-center">
-        <div *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedFenefic" (click)="onSelect(_benef)" class="col-md-2 mx-3 mb-3">
-          <a class="nav-link" [routerLink]="['/detalle-beneficios',beneficio.id]" >
-            <img src="{{beneficio.imagen}}" class="img-fluid d-flex mx-auto" alt="">
+<div class=" bg-color">
+  <div class="banner">
+    <img src="../../assets/img/banner_3.jpg" class="img-fluid" alt="">
+  </div>
+  <div class="padding-main">
+    <h1 class="text-center text-dark title-large">Nuestros Beneficios</h1>
+    <div class="row d-flex justify-content-center">
+      <div *ngFor="let beneficio of beneficios" [class.selected]="beneficio === selectedFenefic" (click)="onSelect(_benef)" class="col-md-3 mx-3 mb-3">
+        <a class="nav-link text-dark" [routerLink]="['/detalle-beneficios',beneficio.id]">
+          <img src="{{beneficio.imagen}}" class="img-fluid d-flex mx-auto" alt="">
           <h3 class="text-center mt-3">{{beneficio.nombre}}</h3>
         </a>
-        </div>
-        
       </div>
-      
     </div>
-  <div class="col-md-12 bg-danger">
-          <h2>SEA DISTRIBUIDOR</h2>
-        </div>
-  </section>
+  </div>
+  <div class="text-banner">
+    <h1 class="text-center text-white m-0">SEA DISTRIBUIDOR</h1>
+  </div>
+  <div class="banner">
+    <img src="../../assets/img/banner_4.jpg" class="img-fluid" alt="">
+  </div>
+
+</div>
