--- a/src/app/detalle-beneficios/detalle-beneficios.component.html
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.html
@@ -8,7 +8,7 @@
           <p class="text-white p-3 d-flex mx-auto">{{benefSelected.detalle}}</p>
         </div>
         <div class=" d-flex ml-auto img-producto">
-          <img src="{{benefSelected.imagen}}" class="img-fluid mx-auto " alt="">
+          <img src="{{benefSelected.imagen}}" class="img-fluid mx-auto h-100" alt="">
         </div>
       </div>
       </div>
@@ -17,5 +17,4 @@
     <button type="button" class="btn btn-info mx-auto">
       <a class="nav-link text-white" [routerLink]="['/beneficios']">Volver</a>
     </button>
-    
   </div>
