--- a/src/app/detalle-productos/detalle-productos.component.css
+++ b/src/app/detalle-productos/detalle-productos.component.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+.bg-color{
+    background: linear-gradient(#395b84b5,#555658);
+    font-family: 'PT Sans', sans-serif;
+}
 .padding-main{
-    padding: 80px 100px 150px;
+    padding: 80px 100px;
     border-top: solid 20px #444444;
     border-bottom: solid 20px #444444;
 }
@@ -8,9 +13,7 @@
    overflow: hidden;
 }
 
-.bg-color{
-    background: linear-gradient(#395b84b5,#555658);
-}
+
 .title-large{
     font-size: 50px;
     line-height: 1.2;
